--- a/pages/stitched.html
+++ b/pages/stitched.html
@@ -357,21 +357,21 @@
                                 <source media="(min-width:992px)"
                                     srcset="../img/stitched/mockups/big-screens/image-product.png">
                                 <img src="../img/stitched/mockups/small-screens/image-product.png"
-                                    alt="Stitched 'image product' mockups">
+                                    alt="Stitched 'image product' mockup">
                             </picture>
 
                             <picture>
                                 <source media="(min-width:992px)"
                                     srcset="../img/stitched/mockups/big-screens/image-sign-up.png">
                                 <img src="../img/stitched/mockups/small-screens/image-sign-up.png"
-                                    alt="Stitched 'image sign up' mockups">
+                                    alt="Stitched 'image sign up' mockup">
                             </picture>
 
                             <picture>
                                 <source media="(min-width:992px)"
                                     srcset="../img/stitched/mockups/big-screens/image-upload.png">
                                 <img src="../img/stitched/mockups/small-screens/image-upload.png"
-                                    alt="Stitched 'image upload' mockups">
+                                    alt="Stitched 'image upload' mockup">
                             </picture>
                         </div>
                     </div>
