Add text to cinemagic page

--- a/pages/cinemagic.html
+++ b/pages/cinemagic.html
@@ -47,7 +47,10 @@
 
                     <div>
                         <p>
-                            #
+                            This project is about designing a native mobile app for both iOS and Android phones, that
+                            solves a specific user problem. It aims to assist young adults, who enjoy watching movies at
+                            cinemas, to book and buy movie tickets at their convenience, so they can watch the
+                            respective films.
                         </p>
                     </div>
                 </div>
@@ -66,7 +69,9 @@
 
                         <div>
                             <p>
-                                #
+                                The aim of this project is to create a native mobile app design for both iOS and Android
+                                mobile phones. The design for iOS phones must follow the Human Interface Guidelines. The
+                                design for Android phones must follow the Material Design Guidelines.
                             </p>
                         </div>
                     </div>
@@ -79,15 +84,25 @@
 
                         <div>
                             <p>
-                                #
+                                Balsamiq Wireframes was used to arrange the placement of different components and
+                                elements used for each page.
                             </p>
                         </div>
 
                         <div>
-                            <picture>
-                                <source media="(min-width:992px)" srcset="../img/#/low-fi/big-screens/#">
-                                <img src="../img/#/low-fi/small-screens/#" alt="# 'login' low fidelity wireframe.">
-                            </picture>
+                            <!-- ios -->
+                            <div>
+                                <picture>
+                                    <source media="(min-width:992px)" srcset="../img/#/low-fi/big-screens/#">
+                                    <img src="../img/cinemagic/low-fi/" alt="# 'login' low fidelity wireframe.">
+                                </picture>
+                            </div>
+
+                            <!-- android -->
+                            <div>
+
+                            </div>
+
                         </div>
                     </div>
 
@@ -99,7 +114,9 @@
 
                         <div>
                             <p>
-                                #
+                                Figma was used to edit the arrangement of the selected components and elements used for
+                                each page. Real text was added to buttons, titles, sub-headings, paragraph sections,
+                                etc.
                             </p>
                         </div>
 
@@ -119,7 +136,8 @@
 
                         <div>
                             <p>
-                                #
+                                Figma was used to add colour to the wireframes, using a colour scheme from the style
+                                guide. The style guide's typography was also applied at this stage.
                             </p>
                         </div>
 
@@ -139,7 +157,8 @@
 
                         <div>
                             <p>
-                                #
+                                These mockups illustrate how the devices look on mobile phones when users are on the app
+                                at various locations.
                             </p>
                         </div>
 
@@ -160,7 +179,9 @@
 
                     <div>
                         <p>
-                            #
+                            A native mobile app was successfully created for both iOS and Android mobile phones. Both
+                            the Human Interface and Material Design Guidelines were followed to ensure the app met their
+                            standards. Feedback from users also helped in making the design of the app intuitive.
                         </p>
                     </div>
                 </div>
@@ -184,8 +205,10 @@
                 <ul>
                     <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://www.behance.net" target="_blank"><i class="fa-brands fa-square-behance"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.behance.net" target="_blank"><i
+                                class="fa-brands fa-square-behance"></i></a></li>
                 </ul>
             </div>
 
