Redo text for healthy eats page

--- a/pages/healthy-eats.html
+++ b/pages/healthy-eats.html
@@ -26,7 +26,6 @@
         </div>
     </header>
 
-    <!-- check this again -->
     <main>
         <section>
             <div>
@@ -72,7 +71,7 @@
                         <div>
                             <p>
                                 To design a responsive recipe web app where users can search for healthy meals and
-                                access their ingredient’s list and cooking instructions.
+                                access their ingredient's list and cooking instructions.
                             </p>
                         </div>
                     </div>
@@ -90,35 +89,7 @@
                             </p>
                         </div>
 
-                        <div>
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/low-fi/big-screens/1-home.png">
-                                <img src="../img/healthy-eats/low-fi/small-screens/1-home.png"
-                                    alt="Healthy Eats 'home' low fidelity wireframe.">
-                            </picture>
 
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/low-fi/big-screens/2-search-results.png">
-                                <img src="../img/healthy-eats/low-fi/small-screens/2-search-results.png"
-                                    alt="Healthy Eats 'search results' low fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/low-fi/big-screens/3-ingredients.png">
-                                <img src="../img/healthy-eats/low-fi/small-screens/3-ingredients.png"
-                                    alt="Healthy Eats 'ingredients' low fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/low-fi/big-screens/4-cooking-instructions.png">
-                                <img src="../img/healthy-eats/low-fi/small-screens/4-cooking-instructions.png"
-                                    alt="Healthy Eats 'cooking instructions' low fidelity wireframe.">
-                            </picture>
-                        </div>
                     </div>
 
                     <!-- mid fi -->
@@ -137,45 +108,8 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mid-fi/big-screens/1-home.png">
-                                <img src="../img/healthy-eats/mid-fi/small-screens/1-home.png"
-                                    alt="Healthy Eats 'home' mid fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mid-fi/big-screens/2-search-results.png">
-                                <img src="../img/healthy-eats/mid-fi/small-screens/2-search-results.png"
-                                    alt="Healthy Eats 'search results' mid fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mid-fi/big-screens/3-ingredients.png">
-                                <img src="../img/healthy-eats/mid-fi/small-screens/3-ingredients.png"
-                                    alt="Healthy Eats 'ingredients' mid fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mid-fi/big-screens/4-cooking-instructions.png">
-                                <img src="../img/healthy-eats/mid-fi/small-screens/4-cooking-instructions.png"
-                                    alt="Healthy Eats 'cooking instructions' mid fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mid-fi/big-screens/5-login.png">
-                                <img src="../img/healthy-eats/mid-fi/small-screens/5-login.png"
-                                    alt="Healthy Eats 'login' mid fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mid-fi/big-screens/6-sign-up.png">
-                                <img src="../img/healthy-eats/mid-fi/small-screens/6-sign-up.png"
-                                    alt="Healthy Eats 'sign up' mid fidelity wireframe.">
+                                <source media="(min-width:992px)" srcset="../img/#/mid-fi/big-screens/#">
+                                <img src="../img/#/mid-fi/small-screens/#" alt="# 'login' mid fidelity wireframe.">
                             </picture>
                         </div>
                     </div>
@@ -195,73 +129,8 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/1-home.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/1-home.png"
-                                    alt="Healthy Eats 'home' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/2-search-results.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/2-search-resutls.png"
-                                    alt="Healthy Eats '2-search-results' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/3-ingredients.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/3-ingredients.png"
-                                    alt="Healthy Eats 'ingredients' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/4-instructions">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/4-instructions"
-                                    alt="Healthy Eats 'instructions' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/5-login.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/5-login.png"
-                                    alt="Healthy Eats 'login' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/6-signup.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/6-signup.png"
-                                    alt="Healthy Eats 'signup' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/7-no-search-results.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/7-no-search-results.png"
-                                    alt="Healthy Eats 'no search results' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/8-404-error.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/8-404-error.png"
-                                    alt="Healthy Eats '404 error' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/9-login-error.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/9-login-error.png"
-                                    alt="Healthy Eats 'login error' hi fidelity wireframe.">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/hi-fi/big-screens/10-signup-error.png">
-                                <img src="../img/healthy-eats/hi-fi/small-screens/10-signup-error.png"
-                                    alt="Healthy Eats 'signup error' hi fidelity wireframe.">
+                                <source media="(min-width:992px)" srcset="../img/#/hi-fi/big-screens/#">
+                                <img src="../img/#/hi-fi/small-screens/#" alt="# 'login' hi fidelity wireframe.">
                             </picture>
                         </div>
                     </div>
@@ -282,24 +151,8 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mockups/big-screens/ingredients.png">
-                                <img src="../img/healthy-eats/mockups/small-screens/ingredients.png"
-                                    alt="Healthy Eats 'ingredients' mockups">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mockups/big-screens/search-results.png">
-                                <img src="../img/healthy-eats/mockups/small-screens/search-results.png"
-                                    alt="Healthy Eats 'search results' mockups">
-                            </picture>
-
-                            <picture>
-                                <source media="(min-width:992px)"
-                                    srcset="../img/healthy-eats/mockups/big-screens/signup.png">
-                                <img src="../img/healthy-eats/mockups/small-screens/signup.png"
-                                    alt="Healthy Eats 'signup' mockups">
+                                <source media="(min-width:992px)" srcset="../img/#/mockups/big-screens/#">
+                                <img src="../img/#/mockups/small-screens/#" alt="# 'image product' mockup">
                             </picture>
                         </div>
                     </div>
@@ -313,7 +166,10 @@
 
                     <div>
                         <p>
-                            The recipe web app was successfully designed. Users can easily search for healthy meals and find their ingredients list and cooking instructions. Improving on the design to attract over 18 year olds was also a success as user feedback from this demographic was collected and applied onto the web app designs.
+                            The recipe web app was successfully designed. Users can easily search for healthy meals and
+                            find their ingredients list and cooking instructions. Improving on the design to attract
+                            over 18 year olds was also a success as user feedback from this demographic was collected
+                            and applied onto the web app designs.
                         </p>
                     </div>
                 </div>
