Redo mid fidelity wireframes

--- a/pages/healthy-eats.html
+++ b/pages/healthy-eats.html
@@ -89,7 +89,35 @@
                             </p>
                         </div>
 
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/low-fi/big-screens/1-home.png">
+                                <img src="../img/healthy-eats/low-fi/small-screens/1-home.png"
+                                    alt="Healthy Eats 'home' low fidelity wireframe.">
+                            </picture>
 
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/low-fi/big-screens/2-search-results.png">
+                                <img src="../img/healthy-eats/low-fi/small-screens/2-search-results.png"
+                                    alt="Healthy Eats 'search results' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/low-fi/big-screens/3-ingredients.png">
+                                <img src="../img/healthy-eats/low-fi/small-screens/3-ingredients.png"
+                                    alt="Healthy Eats '3 ingredients' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/low-fi/big-screens/4-cooking-instructions.png">
+                                <img src="../img/healthy-eats/low-fi/small-screens/4-cooking-instructions.png"
+                                    alt="Healthy Eats 'cooking instructions' low fidelity wireframe.">
+                            </picture>
+                        </div>
                     </div>
 
                     <!-- mid fi -->
@@ -108,8 +136,45 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/#/mid-fi/big-screens/#">
-                                <img src="../img/#/mid-fi/small-screens/#" alt="# 'login' mid fidelity wireframe.">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/1-home.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/1-home.png"
+                                    alt="Healthy Eats 'home' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/2-search-results.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/2-search-results.png"
+                                    alt="Healthy Eats 'search-results' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/3-ingredients.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/3-ingredients.png"
+                                    alt="Healthy Eats 'ingredients' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/4-cooking-instructions.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/4-cooking-instructions.png"
+                                    alt="Healthy Eats 'cooking instructions' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/5-login.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/5-login.png"
+                                    alt="Healthy Eats 'login' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mid-fi/big-screens/6-sign-up.png">
+                                <img src="../img/healthy-eats/mid-fi/small-screens/6-sign-up.png"
+                                    alt="Healthy Eats 'sign up' mid fidelity wireframe.">
                             </picture>
                         </div>
                     </div>
@@ -129,8 +194,73 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/#/hi-fi/big-screens/#">
-                                <img src="../img/#/hi-fi/small-screens/#" alt="# 'login' hi fidelity wireframe.">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/1-home.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/1-home.png"
+                                    alt="Healthy Eats 'home' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/2-search-results.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/2-search-results.png"
+                                    alt="Healthy Eats 'search-results' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/3-ingredients.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/3-ingredients.png"
+                                    alt="Healthy Eats 'ingredients' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/4-instructions.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/4-instructions.png"
+                                    alt="Healthy Eats 'instructions' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/5-login.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/5-login.png"
+                                    alt="Healthy Eats 'login' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/6-signup.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/6-signup.png"
+                                    alt="Healthy Eats 'signup' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/7-no-search-results.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/7-no-search-results.png"
+                                    alt="Healthy Eats 'no search results' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/8-404-error.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/8-404-error.png"
+                                    alt="Healthy Eats '404 error' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/9-login-error.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/9-login-error.png"
+                                    alt="Healthy Eats 'login error' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/hi-fi/big-screens/10-signup-error.png">
+                                <img src="../img/healthy-eats/hi-fi/small-screens/10-signup-error.png"
+                                    alt="Healthy Eats '10 signup error' hi fidelity wireframe.">
                             </picture>
                         </div>
                     </div>
