Add mockup images for healthy eats file

--- a/pages/healthy-eats.html
+++ b/pages/healthy-eats.html
@@ -281,8 +281,24 @@
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/#/mockups/big-screens/#">
-                                <img src="../img/#/mockups/small-screens/#" alt="# 'image product' mockup">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mockups/big-screens/ingredients-tablet.png">
+                                <img src="../img/healthy-eats/mockups/small-screens/ingredients-tablet.png"
+                                    alt=">Healthy Eat 'ingredients tablet' mockup">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mockups/big-screens/search-results-laptop.png">
+                                <img src="../img/healthy-eats/mockups/small-screens/search-results-laptop.png"
+                                    alt=">Healthy Eat 'search results laptop' mockup">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/healthy-eats/mockups/big-screens/signup-mobile.png">
+                                <img src="../img/healthy-eats/mockups/small-screens/signup-mobile.png"
+                                    alt=">Healthy Eat 'signup mobile' mockup">
                             </picture>
                         </div>
                     </div>
