Change folder directory name

--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- normalize.min.css CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="img/logos/small-screens/favicon-icon-flower.png">
     <script src="https://kit.fontawesome.com/bfcbb8f6a3.js" crossorigin="anonymous"></script>
     <title>UI Portfolio | Stitched</title>
@@ -19,7 +24,7 @@
             <nav>
                 <ul>
                     <li><a href="../index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="../about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -63,13 +68,13 @@
                 <!-- overall process stages -->
                 <div>
                     <div>
-                        <h2>Overall process stages</h2>
+                        <h3>Overall process stages</h3>
                     </div>
 
                     <!-- objective -->
                     <div>
                         <div>
-                            <h3>Objective</h3>
+                            <h4>Objective</h4>
                         </div>
 
                         <div>
@@ -83,7 +88,7 @@
                     <!-- low fi -->
                     <div>
                         <div>
-                            <h3>Low-fi wireframes</h3>
+                            <h4>Low-fi wireframes</h4>
                         </div>
 
                         <div>
@@ -169,7 +174,7 @@
                     <!-- mid fi -->
                     <div>
                         <div>
-                            <h3>Mid-fi wireframes</h3>
+                            <h4>Mid-fi wireframes</h4>
                         </div>
 
                         <div>
@@ -256,7 +261,7 @@
                     <!-- hi fi -->
                     <div>
                         <div>
-                            <h3>Hi-fi wireframes</h3>
+                            <h4>Hi-fi wireframes</h4>
                         </div>
 
                         <div>
@@ -342,7 +347,7 @@
                     <!-- mockups -->
                     <div>
                         <div>
-                            <h3>Mockups</h3>
+                            <h4>Mockups</h4>
                         </div>
 
                         <div>
@@ -380,7 +385,7 @@
                 <!-- conclusion -->
                 <div>
                     <div>
-                        <h2>Conclusion</h2>
+                        <h3>Conclusion</h3>
                     </div>
 
                     <div>
@@ -405,7 +410,7 @@
             </div>
 
             <div>
-                <a href="mailto:email@email.com">Email Me</a>
+                <a href="mailto:email@email.com" class="button contact">Email Me</a>
             </div>
 
             <div>
