--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- normalize.min.css CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="img/logos/small-screens/favicon-icon-flower.png">
     <script src="https://kit.fontawesome.com/bfcbb8f6a3.js" crossorigin="anonymous"></script>
     <title>UI Portfolio | Cinemagic</title>
@@ -19,7 +24,7 @@
             <nav>
                 <ul>
                     <li><a href="../index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="../about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -58,13 +63,13 @@
                 <!-- overall process stages -->
                 <div>
                     <div>
-                        <h2>Overall process stages</h2>
+                        <h3>Overall process stages</h3>
                     </div>
 
                     <!-- objective -->
                     <div>
                         <div>
-                            <h3>Objective</h3>
+                            <h4>Objective</h4>
                         </div>
 
                         <div>
@@ -79,7 +84,7 @@
                     <!-- low fi -->
                     <div>
                         <div>
-                            <h3>Low-fi wireframes</h3>
+                            <h4>Low-fi wireframes</h4>
                         </div>
 
                         <div>
@@ -93,7 +98,7 @@
                             <!-- ios -->
                             <div>
                                 <div>
-                                    <h3>iOS</h3>
+                                    <h5>iOS</h5>
                                 </div>
 
                                 <div>
@@ -165,7 +170,7 @@
                             <!-- android -->
                             <div>
                                 <div>
-                                    <h3>Android</h3>
+                                    <h5>Android</h5>
                                 </div>
 
                                 <div>
@@ -239,7 +244,7 @@
                     <!-- mid fi -->
                     <div>
                         <div>
-                            <h3>Mid-fi wireframes</h3>
+                            <h4>Mid-fi wireframes</h4>
                         </div>
 
                         <div>
@@ -254,7 +259,7 @@
                             <!-- ios -->
                             <div>
                                 <div>
-                                    <h3>iOS</h3>
+                                    <h5>iOS</h5>
                                 </div>
 
                                 <div>
@@ -326,7 +331,7 @@
                             <!-- android -->
                             <div>
                                 <div>
-                                    <h3>Android</h3>
+                                    <h5>Android</h5>
                                 </div>
 
                                 <div>
@@ -400,7 +405,7 @@
                     <!-- hi fi -->
                     <div>
                         <div>
-                            <h3>Hi-fi wireframes</h3>
+                            <h4>Hi-fi wireframes</h4>
                         </div>
 
                         <div>
@@ -414,7 +419,7 @@
                             <!-- ios -->
                             <div>
                                 <div>
-                                    <h3>iOS</h3>
+                                    <h5>iOS</h5>
                                 </div>
 
                                 <div>
@@ -486,7 +491,7 @@
                             <!-- android -->
                             <div>
                                 <div>
-                                    <h3>Android</h3>
+                                    <h5>Android</h5>
                                 </div>
 
                                 <div>
@@ -560,7 +565,7 @@
                     <!-- mockups -->
                     <div>
                         <div>
-                            <h3>Mockups</h3>
+                            <h4>Mockups</h4>
                         </div>
 
                         <div>
@@ -598,7 +603,7 @@
                 <!-- conclusion -->
                 <div>
                     <div>
-                        <h2>Conclusion</h2>
+                        <h3>Conclusion</h3>
                     </div>
 
                     <div>
@@ -622,7 +627,7 @@
             </div>
 
             <div>
-                <a href="mailto:email@email.com">Email Me</a>
+                <a href="mailto:email@email.com" class="button contact">Email Me</a>
             </div>
 
             <div>
