--- a/about.html
+++ b/about.html
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- normalize.min.css CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="img/logos/small-screens/favicon-icon-flower.png">
     <script src="https://kit.fontawesome.com/bfcbb8f6a3.js" crossorigin="anonymous"></script>
     <title>About | Vivian</title>
@@ -18,7 +23,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="../index.html">Work</a></li>
+                    <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -109,7 +114,7 @@
         </div>
 
         <div>
-            <a href="mailto:email@email.com">Email Me</a>
+            <a href="mailto:email@email.com" class="button contact">Email Me</a>
         </div>
 
         <div>
