Update href path for links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- normalize.min.css CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="img/logos/small-screens/favicon-icon-flower.png">
     <script src="https://kit.fontawesome.com/bfcbb8f6a3.js" crossorigin="anonymous"></script>
     <title>UI Portfolio | Vivian | United Kingdom</title>
@@ -19,7 +24,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
-                    <li><a href="pages/about.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -68,7 +73,7 @@
                             Iconography.
                         </p>
 
-                        <a href="pages/stitched.html">Project Link</a>
+                        <a href="projects/stitched.html" class="button">Project Link</a>
                     </div>
                 </div>
 
@@ -91,7 +96,7 @@
                             Flow/Activity Diagram.
                         </p>
 
-                        <a href="pages/healthy-eats.html">Project Link</a>
+                        <a href="projects/healthy-eats.html" class="button">Project Link</a>
                     </div>
                 </div>
 
@@ -113,7 +118,7 @@
                             Flow/Activity Diagram.
                         </p>
 
-                        <a href="pages/cinemagic.html">Project Link</a>
+                        <a href="projects/cinemagic.html" class="button">Project Link</a>
                     </div>
                 </div>
 
@@ -136,7 +141,7 @@
                             Iconography, User Flow/Activity Diagram.
                         </p>
 
-                        <a href="pages/frugalityfirst.html">Project Link</a>
+                        <a href="projects/frugalityfirst.html" class="button">Project Link</a>
                     </div>
                 </div>
             </div>
@@ -152,15 +157,17 @@
             </div>
 
             <div>
-                <a href="mailto:email@email.com">Email Me</a>
+                <a href="mailto:email@email.com" class="button contact">Email Me</a>
             </div>
 
             <div>
                 <ul>
                     <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://www.behance.net" target="_blank"><i class="fa-brands fa-square-behance"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.behance.net" target="_blank"><i
+                                class="fa-brands fa-square-behance"></i></a></li>
                 </ul>
             </div>
 
