Change class name

--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -627,7 +627,7 @@
             </div>
 
             <div>
-                <a href="mailto:email@email.com" class="button contact">Email Me</a>
+                <a href="mailto:email@email.com" class="button email">Email Me</a>
             </div>
 
             <div>
