--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
         </div>
 
         <div>
-            <a href="mailto:email@email.com" class="button contact">Email Me</a>
+            <a href="mailto:email@email.com" class="button email">Email Me</a>
         </div>
 
         <div>
