--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
 
             <div>
-                <a href="mailto:email@email.com" class="button contact">Email Me</a>
+                <a href="mailto:email@email.com" class="button email">Email Me</a>
             </div>
 
             <div>
