--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -337,7 +337,7 @@
             </div>
 
             <div>
-                <a href="mailto:email@email.com" class="button contact">Email Me</a>
+                <a href="mailto:email@email.com" class="button email">Email Me</a>
             </div>
 
             <div>
