Add unique IDs for each HTML section block

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="nav">
         <div>
             <a href="../index.html">
                 <img src="../img/logos/small-screens/logo.png" alt="Logo Vivian">
@@ -31,7 +31,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="aboutMe">
         <div>
             <div>
                 <h1>About</h1>
