--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="nav">
         <div>
             <a href="index.html">
                 <img src="img/logos/small-screens/logo.png" alt="Logo Vivian">
@@ -32,7 +32,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="selfIntro">
             <div>
                 <h1>Hi, my name is Vivian.<span>I am a UI Designer from the United Kingdom.</span></h1>
 
@@ -49,7 +49,7 @@
         </section>
 
         <!-- projects -->
-        <section>
+        <section id="projects">
             <div>
                 <h2>My Work</h2>
             </div>
