--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="nav">
         <div>
             <a href="../index.html">
                 <img src="../img/logos/small-screens/logo.png" alt="Logo Vivian">
@@ -31,7 +31,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="healthyEatsProject">
         <section>
             <div>
                 <h1>Healthy Eats</h1>
